# turbo

./: .eslintrc.yaml  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: design.md  official-plugins.md
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/turbo-plugin/: Cargo.toml
src-tauri/turbo-plugin/examples/: vacant.rs
src-tauri/turbo-plugin/src/: export.rs  import.rs  types.rs
src-tauri/turbo-protocol/: Cargo.toml
src-tauri/turbo-protocol/src/: common.rs  main.rs  render_object.rs  shader.rs
src-tauri/turbo-protocol/src/render_object/: param.rs  shader.rs  speaker.rs
src/components/: controls.tsx  preview.tsx
src/lib/: anchor.ts  def.ts  exports.ts  param.ts  pipeline.ts  plugin.ts  store.ts
src/lib/runtime/: index.ts  types.ts
src/pages/: app.tsx
