[package]
name = "turbo-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
fp-bindgen = { version = "2.2.0", features = ["bytes-compat", "generators"] }
paste = "1.0.9"
thiserror = "1.0.34"
